[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "airspytools"
version = "0.1.0"
description = "Placeholder package for upcoming Airspy SDR utilities"
readme = "README.md"
authors = [{ name = "Airspytools Contributors" }]
license = { text = "MIT" }
requires-python = ">=3.12"
keywords = ["airspy", "sdr", "radio", "signal-processing"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Topic :: Scientific/Engineering :: Electronic Design Automation"
]
dependencies = [
    "numpy>=1.26"
]

[project.optional-dependencies]
dev = [
    "numpy>=1.26",
    "pytest>=7.0"
]

[tool.setuptools]
py-modules = [
    "airspy_mini_reader",
    "circular_iq_buffer",
    "mini_gain_profile",
    "file_iq_reader",
    "core",
    "sweep",
    "cli",
]
